--- a/themes/archie/layouts/_default/baseof.html
+++ b/themes/archie/layouts/_default/baseof.html
@@ -7,5 +7,16 @@
         {{- block "main" . }}{{- end }}
         {{- partial "footer.html" . -}}
         </div>
+        <script>
+          if (window.netlifyIdentity) {
+            window.netlifyIdentity.on("init", user => {
+              if (!user) {
+                window.netlifyIdentity.on("login", () => {
+                  document.location.href = "/admin/";
+                });
+              }
+            });
+          }
+        </script>
     </body>
 </html>
