--- a/themes/archie/layouts/shortcodes/soundcloud.html
+++ b/themes/archie/layouts/shortcodes/soundcloud.html
@@ -1,8 +1,1 @@
-<iframe
-    width="96%"
-    height="100"
-    scrolling="yes"
-    frameborder="no"
-    allow="autoplay"
-    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/{{ index .Params 0 }}&color=%2371cc98&auto_play=false&hide_related=false&show_comments=false&show_user=false&show_reposts=false&show_teaser=true&visual=true"
-></iframe>
+<iframe width="96%" height="100" scrolling="yes" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/{{ index .Params 0 }}&color=%2371cc98&auto_play=false&hide_related=false&show_comments=false&show_user=false&show_reposts=false&show_teaser=true&visual=true"></iframe>
