--- a/themes/archie/static/css/main.css
+++ b/themes/archie/static/css/main.css
@@ -96,8 +96,7 @@ img {
 }
 
 img.img-responsive {
-  margin-top: 1em;
-  margin-right: 2em;
+
 }
 
 figure {
@@ -112,6 +111,12 @@ figure img {
 }
 
 @media screen and (max-width: 600px) {
+  time {
+    display: none;
+  }
+  .list-tags a{
+    display: none;
+  }
   img.short{
     display : block;
   }
@@ -288,7 +293,8 @@ article .title {
 }
 .description {
     font-family: 'Enriqueta', serif;
-    padding-left: 2em;
+    padding-left: 1.5em;
+
 }
 
 /* Callout */
