--- a/themes/archie/layouts/_default/single.html
+++ b/themes/archie/layouts/_default/single.html
@@ -2,7 +2,7 @@
 <main>
 	<article>
 		<div class="title">
-			<h1 class="title">{{ .Title }}<span class="draft-label">DRAFT</span></h1>
+			<h1 class="title">{{ .Title }}</h1>
 
 		</div>
 		{{ if isset .Params "tldr" }}
